worked on js code and added functionality for buttons

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
                 <!-- p = plus, m = minus, i need to make function tracking if the number is pos or neg -->
                 <button class="btn special" onclick="addToArray('m')">+/-</button>
                 <button class="btn special" onclick="addToArray('%')">%</button>
-                <button class="btn operator" onclick="addToArray('/')">÷</button>
+                <button class="btn operator" onclick="addToArray('÷')">÷</button>
             </div>
             <div class="row">
                 <button class="btn normal" onclick="addToArray('7')">7</button>
                 <button class="btn normal" onclick="addToArray('8')">8</button>
                 <button class="btn normal" onclick="addToArray('9')">9</button>
-                <button class="btn operator" onclick="addToArray('*')">×</button>
+                <button class="btn operator" onclick="addToArray('×')">×</button>
             </div>
             <div class="row">
                 <button class="btn normal" onclick="addToArray('4')">4</button>
                 <button class="btn normal" onclick="addToArray('5')">5</button>
                 <button class="btn normal" onclick="addToArray('6')">6</button>
-                <button class="btn operator" onclick="addToArray('-')">–</button>
+                <button class="btn operator" onclick="addToArray('–')">–</button>
             </div>
             <div class="row">
                 <button class="btn normal" onclick="addToArray('1')">1</button>
